--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,61 +1,71 @@
-@define-color backgrounddark #0f1117;
-@define-color backgroundlight #1a1d24;
-@define-color accentcolor #89b4fa;
-@define-color textcolor1 #cdd6f4;
-@define-color textcolor2 #bac2de;
-@define-color urgentcolor #f38ba8;
-@define-color disabledcolor #585b70;
-@define-color translucent rgba(0, 0, 0, 0.5);
+@define-color bg #2E3440;
+@define-color light-bg #3B4252;
+@define-color accent #81A1C1;
+@define-color text #ECEFF4;
+@define-color urgent #BF616A;
 
 * {
   border: none;
   border-radius: 0;
   font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free";
   font-weight: bold;
-  font-size: 14px;
+  font-size: 13px;
   min-height: 0;
 }
 
 window#waybar {
-  background: rgba(15, 17, 23, 0.6); /* dark blue-black with 60% opacity */
-  color: @textcolor1;
+  /* Slightly darker base color and increased transparency */
+  background: rgba(30, 34, 42, 0.7);
+  color: @text;
 }
 
-#custom-apps {
-  background-color: @backgrounddark;
-  color: @textcolor1;
-  border-radius: 15px;
-  margin: 10px 8px 10px 15px;
-  padding: 2px 12px;
-}
-
-#hyprland-window {
-  background-color: @backgrounddark;
-  color: @textcolor2;
-  border-radius: 15px;
-  margin: 10px 15px 10px 0px;
-  padding: 2px 14px;
-}
-
+#custom-apps,
+#workspaces,
+#window,
 #tray,
 #battery,
 #pulseaudio,
 #clock,
 #custom-logout {
-  background-color: @backgroundlight;
-  padding: 2px 10px;
-  margin: 10px 5px 10px 5px;
-  border-radius: 15px;
+  background-color: @light-bg;
+  color: @text;
+  border-radius: 10px;
+  margin: 5px 3px;
+  padding: 0px 10px;
+}
+
+#custom-apps {
+  color: @accent;
+  margin-left: 10px;
+}
+
+#workspaces button {
+  color: @text;
+  padding: 0 5px;
+}
+
+#workspaces button.active {
+  color: @accent;
+  border-bottom: 2px solid @accent;
+}
+
+#workspaces button.urgent {
+  color: @urgent;
 }
 
 #battery.warning {
-  color: orange;
+  color: #EBCB8B;
 }
+
 #battery.critical {
-  color: @urgentcolor;
+  color: @urgent;
 }
 
 #pulseaudio.muted {
-  color: @disabledcolor;
+  color: #4C566A;
 }
 
+#custom-logout {
+  margin-right: 10px;
+  color: @urgent;
+}
