--- a/waybar/style.css
+++ b/waybar/style.css
@@ -7,7 +7,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free";
+  /* font-family: "Iosevka Nerd Font", "Font Awesome 6 Free"; */
   font-weight: bold;
   font-size: 13px;
   min-height: 0;
