--- a/waybar/style.css
+++ b/waybar/style.css
@@ -14,11 +14,12 @@
 }
 
 window#waybar {
+    background-color: transparent;
+}
+
+window#waybar > box {
     background-color: @bg;
-    color: @fg;
     border-radius: 12px;
-    transition-property: background-color;
-    transition-duration: .5s;
 }
 
 #custom-launcher,
@@ -26,6 +27,7 @@ window#waybar {
 #window,
 #pulseaudio,
 #tray,
+#battery,
 #clock,
 #custom-exit {
     padding: 0 10px;
@@ -57,6 +59,18 @@ window#waybar {
 
 #pulseaudio {
     color: @secondary;
+}
+
+#battery {
+    color: @primary;
+}
+
+#battery.charging {
+    color: @secondary;
+}
+
+#battery.critical:not(.charging) {
+    color: @alert;
 }
 
 #clock {
